# AIP-PROJECT

./: .gitignore.txt  README.md
ClientHSEgram3/: CMakeLists.txt  Doxyfile  chatwindow.cpp  chatwindow.h  chatwindow.ui  cryptoengine.cpp  cryptoengine.h  ctest.cpp  ctest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  style.qss
ClientHSEgram3/html/: annotated.html  annotated_dup.js  chatwindow_8h_source.html  class_bubble_message_delegate-members.html  class_bubble_message_delegate.html  class_chat_window-members.html  class_chat_window.html  class_chat_window.js  class_crypto_engine-members.html  class_crypto_engine.html  class_crypto_engine.js  class_hse_messenger_test-members.html  class_hse_messenger_test.html  class_main_window-members.html  class_main_window.html  class_main_window.js  classes.html  cryptoengine_8h_source.html  ctest_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  main_8cpp.html  mainwindow_8h_source.html  navtreedata.js  navtreeindex0.js  struct_main_window_1_1_clients_buff-members.html  struct_main_window_1_1_clients_buff.html
ClientHSEgram3/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  (+11 more)
ClientHSEgram3/latex/: annotated.tex  chatwindow_8h_source.tex  class_bubble_message_delegate.eps  class_bubble_message_delegate.tex  class_chat_window.tex  class_crypto_engine.eps  class_crypto_engine.tex  class_hse_messenger_test.eps  class_hse_messenger_test.tex  class_main_window.tex  cryptoengine_8h_source.tex  ctest_8h_source.tex  files.tex  hierarchy.tex  main_8cpp.tex  mainwindow_8h_source.tex  refman.tex  struct_main_window_1_1_clients_buff.tex
ServerHSEgram/: CMakeLists.txt  Doxyfile  hseserver.cpp  hseserver.h  main.cpp
ServerHSEgram/html/: annotated.html  annotated_dup.js  class_hse_server-members.html  class_hse_server.html  class_hse_server.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  hseserver_8h_source.html  navtreedata.js  navtreeindex0.js  struct_hse_server_1_1_session-members.html  struct_hse_server_1_1_session.html
ServerHSEgram/latex/: annotated.tex  class_hse_server.eps  class_hse_server.tex  files.tex  hierarchy.tex  hseserver_8h_source.tex  refman.tex  struct_hse_server_1_1_session.tex
(+45 files in other folders)
